--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <img src="images/RESFM_gif.gif" alt="clean-usnob" width="160" height="160">
             </td>
             <script type="text/javascript">
-					var bibtex_grelpose = "@misc{khatib2024leveraging,\n title={Leveraging Image Matching Toward End-to-End Relative Camera Pose Regression},\n author={Fadi Khatib and Yuval Margalit and Meirav Galun and Ronen Basri},\n year={2024},\n eprint={2211.14950},\n archivePrefix={arXiv},\n primaryClass={cs.CV}\n }"
+					var bibtex_RESFM = "@misc{khatib2024resfm,\n title={RESFM: Robust Equivariant Multiview Structure from Motion},\n author={Fadi Khatib and Yoni Kasten and Dror Moran and Meirav Galun and Ronen Basri},\n year={2024},\n eprint={2404.14280},\n archivePrefix={arXiv},\n primaryClass={cs.CV}\n }"
               </script>
             <td width="75%" valign="middle">
               <a href="https://robust-equivariant-sfm.github.io/">
@@ -94,15 +94,16 @@
               <br>
               <div class="btn-group">
 				<button onclick=copyToClipboard(bibtex_grelpose)>BibTeX</button> /
-				<a href="https://arxiv.org/abs/2211.14950">ArXiv</a> /
-				<a href="https://robust-equivariant-sfm.github.io/">Project Page </a> /
+				<a href="https://arxiv.org/abs/2404.14280">ArXiv</a> /
+				<a href="https://robust-equivariant-sfm.github.io/">Project Page </a>
               </div>
               <p>We present a robust solver based on permutation equivariant architecture for the
-structure from motion problem. Our proposed method can cope with a point
-track tensor contaminated with many outliers. In addition, we modified the
-bundle adjustment module to make it robust enough to handle classification
-errors. Our method achieves high accuracy while reducing the time significantly
-compared to classical methods.</p>
+                    structure from motion problem. Our proposed method can cope with a point
+                    track tensor contaminated with many outliers. In addition, we modified the
+                    bundle adjustment module to make it robust enough to handle classification
+                    errors. Our method achieves high accuracy while reducing the time significantly
+                    compared to classical methods.
+              </p>
             </td>
           </tr>
 
@@ -125,9 +126,9 @@ compared to classical methods.</p>
               <div class="btn-group">
 				<button onclick=copyToClipboard(bibtex_grelpose)>BibTeX</button> /
 				<a href="https://arxiv.org/abs/2211.14950">ArXiv</a> /
-				<a href="https://fadikhatib.github.io/GRelPose/">Project Page </a> /
+				<a href="https://fadikhatib.github.io/GRelPose/">Project Page </a>
               </div>
-              <p>We propose to leverages Image Matching (IM) as a pre-trained task for relative pose regression. Specifically, we use LoFTR, an architecture that utilizes an attention-based network pre-trained on Scannet, to extract semi-dense feature maps, which are then warped and fed into a pose regression network.</p>
+              <p>We propose to leverage Image Matching (IM) as a pre-trained task for relative pose regression. Specifically, we use LoFTR, an architecture that utilizes an attention-based network pre-trained on Scannet, to extract semi-dense feature maps, which are then warped and fed into a pose regression network.</p>
             </td>
           </tr>
 
@@ -242,10 +243,10 @@ compared to classical methods.</p>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Awards</heading>
               <ul>
-                  <li> The Cornell, Maryland, Max Planck Pre-doctoral Research School, 2023.</li>
-                  <li> Yoel Meches Memorial Fellowship for excellent students, Weizmann Institute of Science, 2023</li>
+              <li> The Cornell, Maryland, Max Planck Pre-doctoral Research School, 2023.</li>
+              <li> Yoel Meches Memorial Fellowship for excellent students, Weizmann Institute of Science, 2023.</li>
               <li> The Feinberg Graduate School Diversity Appreciation Certificate for Advancing Equality, Diversity, and Inclusion, Weizmann Institute of Science, 2023.</li>
-              <li> Moshe Horovitz memorial fellowship for excellent students, Weizmann Institute of Science, 2022.</li>
+              <li> Moshe Horovitz Memorial Fellowship for excellent students, Weizmann Institute of Science, 2022.</li>
               <li> Summa Cum Laude (B.Sc Computer Science), University of Haifa, 2022.</li>
               <li> The Israeli Council for Higher Education Scholarship for outstanding master students, 2021-2023.</li>
               <li> Young Weizmann Scholars Diversity and Excellence Program Scholarship, 2021.</li>
