--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                 <a href="mailto:fadi.e.khateeb@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="data/FadiKhatib_CV.pdf" target="_blank">CV</a> &nbsp/&nbsp
 <!--                <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp-->
-<!--                <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp/&nbsp-->
+                <a href="https://scholar.google.com/citations?user=ucCJtZ8AAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://twitter.com/FadiKhatib1311" target="_blank">Twitter</a> &nbsp/&nbsp
-                <a href="https://www.linkedin.com/in/fadi-khateeb/" target="_blank">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/fadiKhatib/" target="_blank">LinkedIn</a>
 <!--                  &nbsp/&nbsp-->
 <!--                <a href="https://github.com/FadiKhateeb" target="_blank">Github</a>-->
               </p>
@@ -107,6 +107,36 @@
             </td>
           </tr>
 
+
+                <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+<!--              <img src="images/RESFM_gif.gif" alt="clean-usnob" width="160" height="160">-->
+            </td>
+            <script type="text/javascript">
+					var bibtex_RESFM = ""
+              </script>
+            <td width="75%" valign="middle">
+              <papertitle>Consensus Learning with Deep Sets for Essential Matrix Estimation</papertitle>
+              <br>
+              Dror Moran, <a href="https://www.linkedin.com/in/yuval-margalit-9688431b7/">Yuval Margalit</a>, Guy Trostianetsky, <strong>Fadi Khatib</strong>, <a href="https://www.weizmann.ac.il/math/meirav/">Meirav Galun</a>, <a href="https://www.weizmann.ac.il/math/ronen/home">Ronen Basri</a>
+              <br>
+              <em>NeurIPS 2024</em>
+              <br>
+              <div class="btn-group">
+<!--				<button onclick=copyToClipboard(bibtex_grelpose)>BibTeX</button> /-->
+				<a href="https://arxiv.org/abs/2406.17414">ArXiv</a>
+<!--				<a href="https://robust-equivariant-sfm.github.io/">Project Page </a>-->
+              </div>
+              <p>We present NACNet, a Noise-Aware Deep Sets framework to estimate relative camera pose, given
+                a set of putative matches extracted from two views of a scene. We demonstrate that a position
+                denoising of inliers and noise-free pretraining enable accurate estimation of the essential matrix.
+                Our experiments indicate that our method can handle large numbers of outliers and achieve accurate
+                pose estimation superior to previous methods.
+              </p>
+              </p>
+            </td>
+          </tr>
+
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/GrelPose.png" alt="clean-usnob" width="160" height="160">
@@ -121,11 +151,11 @@
               <br>
               <strong>Fadi Khatib*</strong>, <a href="https://www.linkedin.com/in/yuval-margalit-9688431b7/">Yuval Margalit*</a>, <a href="https://www.weizmann.ac.il/math/meirav/">Meirav Galun</a>, <a href="https://www.weizmann.ac.il/math/ronen/home">Ronen Basri</a>
               <br>
-              <em>Preprint</em>, 2024
+              <em>GCPR 2024 (Oral)</em>
               <br>
               <div class="btn-group">
 				<button onclick=copyToClipboard(bibtex_grelpose)>BibTeX</button> /
-				<a href="https://arxiv.org/abs/2211.14950">ArXiv</a> /
+				<a href="https://arxiv.org/abs/2211.14950">ArXiv</a>
 				<a href="https://fadikhatib.github.io/GRelPose/">Project Page </a>
               </div>
               <p>We propose to leverage Image Matching (IM) as a pre-trained task for relative pose regression. Specifically, we use LoFTR, an architecture that utilizes an attention-based network pre-trained on Scannet, to extract semi-dense feature maps, which are then warped and fed into a pose regression network.</p>
