--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
               </p>
 
               <p>
-                I am a master student  in the Department of Computer Science and Applied Mathematics at the <a href="https://www.weizmann.ac.il/pages/">Weizmann Institute of Science</a> under the supervision of <a href="https://www.weizmann.ac.il/math/ronen/home"> Prof. Ronen Basri.</a>
+                I am a Ph.D. candidate in the Department of Computer Science and Applied Mathematics at the <a href="https://www.weizmann.ac.il/pages/">Weizmann Institute of Science</a> under the supervision of <a href="https://www.weizmann.ac.il/math/ronen/home"> Prof. Ronen Basri.</a>
               </p>
               <p>
                   I received my B.Sc in Computer Science at the age of 18 from the University of Haifa through the <a href="https://cs.hevra.haifa.ac.il/index.php/information-for-registrants-he/challenge-program">Challenge program</a>, which is designed for exceptional high school students.
               </p>
                 <p>
-                    My main research interest lies in developing deep learning methods for 3D reconstruction and structure-from-motion tasks.
+                    My main research interest lies in developing deep learning methods for 3D reconstruction, Structure-from-motion, and visual localization tasks.
 <!--                    My research interests lie at the intersection of computer vision, computer graphics, and machine learning. Through my research, I want to make it easier for computers and machines to understand and capture the dynamic 3D world we live in from images and videos.-->
                 </p>
 
@@ -239,7 +239,10 @@
               <img src="images/logos/WIS_logo1.svg" alt="clean-usnob" width="160" height="160">
             </td>
             <td width="75%" valign="center">
-              Introduction to computer vision course</a> , Winter 2024
+
+			  Multiple View Geometry for Computer Vision Applications course (Spring 2025).
+			  <br/>
+              Introduction to computer vision course (Winter 2023, Winter 2024).
             </td>
 
             </td>
@@ -273,18 +276,19 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Awards</heading>
               <ul>
-              <li> The Cornell, Maryland, Max Planck Pre-doctoral Research School, 2023.</li>
-              <li> Yoel Meches Memorial Fellowship for excellent students, Weizmann Institute of Science, 2023.</li>
-              <li> The Feinberg Graduate School Diversity Appreciation Certificate for Advancing Equality, Diversity, and Inclusion, Weizmann Institute of Science, 2023.</li>
-              <li> Moshe Horovitz Memorial Fellowship for excellent students, Weizmann Institute of Science, 2022.</li>
-              <li> Summa Cum Laude (B.Sc Computer Science), University of Haifa, 2022.</li>
-              <li> The Israeli Council for Higher Education Scholarship for outstanding master students, 2021-2023.</li>
-              <li> Young Weizmann Scholars Diversity and Excellence Program Scholarship, 2021.</li>
-              <li> "Akavia" Scholarship for outstanding students at the department of CS, University of Haifa, 2021.</li>
-              <li> Dean scholarship (summa cum laude), University of Haifa, 2020.</li>
-              <li> "Akavia" Scholarship for outstanding students at the department of CS, University of Haifa, 2020.</li>
-              <li> The 100 Most Outstanding Students Award at the National Mathematics Olympics, 2018.</li>
-              <li> First place at the "Moofet" National Mathematics Olympics, 2015.</li>
+                <li> The Council for Higher Education Fellowship for Outstanding Doctoral Students, 2024-2027.</li>
+                <li> The Cornell, Maryland, Max Planck Pre-doctoral Research School, 2023.</li>
+                <li> Yoel Meches Memorial Fellowship for Excellent Students, Weizmann Institute of Science, 2023.</li>
+                <li> The Feinberg Graduate School Diversity Appreciation Certificate for Advancing Equality, Diversity, and Inclusion, Weizmann Institute of Science, 2023.</li>
+                <li> Moshe Horovitz Memorial Fellowship for Excellent Students, Weizmann Institute of Science, 2022.</li>
+                <li> Summa Cum Laude (B.Sc Computer Science), University of Haifa, 2022.</li>
+                <li> The Council for Higher Education Scholarship for Outstanding Master Students, 2021-2023.</li>
+                <li> <a href="https://wis-wander.weizmann.ac.il/peoplecampus/summertime-science">Young Weizmann Scholars Diversity and Excellence Program Scholarship, 2021.</a></li>
+                <li> Akavia Scholarship for Outstanding Students at the Department of CS, University of Haifa, 2021.</li>
+                <li> Dean Scholarship (Summa Cum Laude), University of Haifa, 2020.</li>
+                <li> Akavia Scholarship for Outstanding Students at the Department of CS, University of Haifa, 2020.</li>
+                <li> The 100 Most Outstanding Students Award at the National Mathematics Olympics, 2018.</li>
+                <li> First Place at the "Moofet" National Mathematics Olympics, 2015.</li>
               </ul>
             </td>
           </tr>
