--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <br>
               <strong>Fadi Khatib</strong>, <a href="https://ykasten.github.io/">Yoni Kasten</a>, Dror Moran, <a href="https://www.weizmann.ac.il/math/meirav/">Meirav Galun</a>, <a href="https://www.weizmann.ac.il/math/ronen/home">Ronen Basri</a>
               <br>
-              <em>Preprint</em>, 2024
+              <em>ICLR 2025</em>
               <br>
               <div class="btn-group">
 				<button onclick=copyToClipboard(bibtex_grelpose)>BibTeX</button> /
