--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               <br>
               <div class="btn-group">
 				<button onclick=copyToClipboard(bibtex_grelpose)>BibTeX</button> /
-				<a href="https://arxiv.org/abs/2211.14950">ArXiv</a>
+				<a href="https://arxiv.org/abs/2211.14950">ArXiv</a> /
 				<a href="https://fadikhatib.github.io/GRelPose/">Project Page </a>
               </div>
               <p>We propose to leverage Image Matching (IM) as a pre-trained task for relative pose regression. Specifically, we use LoFTR, an architecture that utilizes an attention-based network pre-trained on Scannet, to extract semi-dense feature maps, which are then warped and fed into a pose regression network.</p>
