--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/FadiKhatib.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/FadiKhatib-circled.png" class="hoverZoomLink"></a>
+              <a href="images/FadiKhatib_2025.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/FadiKhatib_2025-circled.png" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
