--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 <!--					var bibtex_RESFM = "@misc{khatib2024resfm,\n title={RESFM: Robust Equivariant Multiview Structure from Motion},\n author={Fadi Khatib and Yoni Kasten and Dror Moran and Meirav Galun and Ronen Basri},\n year={2024},\n eprint={2404.14280},\n archivePrefix={arXiv},\n primaryClass={cs.CV}\n }"-->
 <!--              </script>-->
             <td width="75%" valign="middle">
-              <a href="https://robust-equivariant-sfm.github.io/">
+              <a href="https://gsvisloc.github.io/">
                 <papertitle>Generalizable Visual Localization for Gaussian Splatting Scene Representations</papertitle>
               </a>
               <br>
