--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 <!--					var bibtex_RESFM = "@misc{khatib2024resfm,\n title={RESFM: Robust Equivariant Multiview Structure from Motion},\n author={Fadi Khatib and Yoni Kasten and Dror Moran and Meirav Galun and Ronen Basri},\n year={2024},\n eprint={2404.14280},\n archivePrefix={arXiv},\n primaryClass={cs.CV}\n }"-->
 <!--              </script>-->
             <td width="75%" valign="middle">
-              <a href="https://robust-equivariant-sfm.github.io/">
+              <a href="https://gsvisloc.github.io/">
                 <papertitle>Generalizable Visual Localization for Gaussian Splatting Scene Representations</papertitle>
               </a>
               <br>
@@ -185,17 +185,15 @@
               <br>
               <div class="btn-group">
 <!--				<button onclick=copyToClipboard(bibtex_grelpose)>BibTeX</button> /-->
-<!--				<a href="https://arxiv.org/abs/2404.14280">ArXiv</a> /-->
-                  <a>Coming Soon</a>
-<!--				<a href="https://robust-equivariant-sfm.github.io/">Project Page </a>-->
+				<a href="https://arxiv.org/abs/2508.18242">ArXiv</a> /
+				<a href="https://gsvisloc.github.io/">Project Page </a>
               </div>
-<!--              <p>We present a robust solver based on permutation equivariant architecture for the-->
-<!--                    structure from motion problem. Our proposed method can cope with a point-->
-<!--                    track tensor contaminated with many outliers. In addition, we modified the-->
-<!--                    bundle adjustment module to make it robust enough to handle classification-->
-<!--                    errors. Our method achieves high accuracy while reducing the time significantly-->
-<!--                    compared to classical methods.-->
-<!--              </p>-->
+              <p>We present GSVisLoc, a generalizable visual localization method for 3D Gaussian Splatting (3DGS) scene representations.
+                  Our approach estimates camera poses by aligning features between a query image and a 3DGS model,
+                  followed by refinement for improved accuracy. GSVisLoc achieves strong results on standard benchmarks,
+                  outperforms existing 3DGS-based baselines,
+                  and generalizes well to unseen scenes without additional training.
+              </p>
             </td>
           </tr>
 
