--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               </p>
 
             <p>
-            I am a direct-track Ph.D. candidate in the Department of Computer Science and Applied Mathematics at the
+            I am a Ph.D. candidate (direct-track) in the Department of Computer Science and Applied Mathematics at the
             <a href="https://www.weizmann.ac.il/pages/">Weizmann Institute of Science</a> under the supervision of
             <a href="https://www.weizmann.ac.il/math/ronen/home"> Prof. Ronen Basri.</a>
             </p>
@@ -169,22 +169,22 @@
 
                 <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/coming_soon.png" alt="clean-usnob" width="160" height="160">
+              <img src="images/GSVisLoc.png" alt="clean-usnob" width="160" height="160">
             </td>
-<!--            <script type="text/javascript">-->
-<!--					var bibtex_RESFM = "@misc{khatib2024resfm,\n title={RESFM: Robust Equivariant Multiview Structure from Motion},\n author={Fadi Khatib and Yoni Kasten and Dror Moran and Meirav Galun and Ronen Basri},\n year={2024},\n eprint={2404.14280},\n archivePrefix={arXiv},\n primaryClass={cs.CV}\n }"-->
-<!--              </script>-->
-            <td width="75%" valign="middle">
-              <a href="https://gsvisloc.github.io/">
-                <papertitle>Generalizable Visual Localization for Gaussian Splatting Scene Representations</papertitle>
+              <script type="text/javascript">
+                var bibtex_GSVisLoc = "@inproceedings{khatib2025generalizable,\n" + "  title={Generalizable Visual Localization for Gaussian Splatting Scene Representations},\n" + "  author={Khatib, Fadi and Moran, Dror and Trostianetsky, Guy and Kasten, Yoni and Galun, Meirav and Basri, Ronen},\n" + "  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},\n" + "  pages={178--189},\n" + "  year={2025}\n" + "}";
+              </script>
+                    <td width="75%" valign="middle">
+                <a href="https://gsvisloc.github.io/">
+                <papertitle>GSVisLoc: Generalizable Visual Localization for Gaussian Splatting Scene Representations</papertitle>
               </a>
               <br>
               <strong>Fadi Khatib*</strong>, Dror Moran*, Guy Trostianetsky, <a href="https://ykasten.github.io/">Yoni Kasten</a>, <a href="https://www.weizmann.ac.il/math/meirav/">Meirav Galun</a>, <a href="https://www.weizmann.ac.il/math/ronen/home">Ronen Basri</a>
               <br>
-              <em>ICCVW 2025</em>
+              <em>ICCV Workshops 2025</em>
               <br>
               <div class="btn-group">
-<!--				<button onclick=copyToClipboard(bibtex_grelpose)>BibTeX</button> /-->
+				<button onclick=copyToClipboard(bibtex_GSVisLoc)>BibTeX</button> /
 				<a href="https://arxiv.org/abs/2508.18242">ArXiv</a> /
 				<a href="https://gsvisloc.github.io/">Project Page </a>
               </div>
@@ -261,7 +261,7 @@
               <div class="btn-group">
 				<button onclick=copyToClipboard(bibtex_nacnet)>BibTeX</button> /
 				<a href="https://arxiv.org/abs/2406.17414">ArXiv</a> /
-				<a href="https://github.com/drormoran/NACNet/">Code</a>
+				<a href="https://github.com/drormoran/NACNet/">Project Page</a>
               </div>
               <p>We present NACNet, a Noise-Aware Deep Sets framework to estimate relative camera pose, given
                 a set of putative matches extracted from two views of a scene. We demonstrate that a position
@@ -378,7 +378,7 @@
 
 			  Multiple View Geometry for Computer Vision Applications course (Spring 2025).
 			  <br/>
-              Introduction to computer vision course (Winter 2023, Winter 2024).
+              Introduction to computer vision course (Winter 2023, Winter 2024 , Winter 2025).
             </td>
 
             </td>
